--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
 DB_DATABASE=gamesj
-DB_USER=root
+DB_USER=facul
 DB_PASSWORD=joaoGAMES_09
 DB_PORT=3306
 
