--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_DATABASE=gamesj
-DB_USER=root
-DB_PASSWORD=joaoGAMES_09
-DB_PORT=3306
+DB_USER=joão
+DB_PASSWORD=Joao123_
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
